--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+  port: 8001
+  servlet:
+    context-path: /api
+
 spring:
   application:
     name: Keep-Track
@@ -7,12 +12,20 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: update
-
-
   datasource:
     url: jdbc:postgresql://localhost:5432/keep_track
     username: postgres
     password: pWnWXMJqqQFmLVGy7KmN
     driverClassName: org.postgresql.Driver
   liquibase:
-    changeLog: classpath:/db/changelog/db.changelog-master.xml
+    changeLog: classpath:/db/db.changelog-master.xml
+    enabled: false
+
+
+logging:
+  file:
+    name: keep-track.log
+  pattern:
+    console: '%date{"yyyy-MM-dd HH:mm:ss,SSS", Europe/Berlin} %-5level [%thread] %logger : %msg%n'
+  level:
+    root: info
