--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>${openapi.ui.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
