--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -3,6 +3,14 @@ server:
   servlet:
     context-path: /api
 
+management:
+  server:
+    port: 8002
+  endpoints:
+    web:
+      exposure:
+        include: '*, httptrace'
+
 spring:
   application:
     name: Keep-Track
@@ -21,6 +29,9 @@ spring:
     changeLog: classpath:/db/db.changelog-master.xml
     enabled: false
 
+springdoc:
+  swagger-ui:
+    path: /swagger
 
 logging:
   file:
