--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -20,6 +20,8 @@
         <liquibase.version>4.15.0</liquibase.version>
         <openapi.ui.version>1.6.11</openapi.ui.version>
         <jjwt.version>0.11.5</jjwt.version>
+        <mapstruct.version>1.5.1</mapstruct.version>
+        <maven-compiler.version>3.10.1</maven-compiler.version>
     </properties>
 
 
@@ -120,6 +122,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${project.parent.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>
@@ -129,16 +132,14 @@
                     </excludes>
                     <classifier>${repackage.classifier}</classifier>
                     <image>
-                        <builder>paketobuildpacks/builder:tiny</builder>
-                        <env>
-                            <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
-                        </env>
+                        <name>keep-track</name>
                     </image>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler.version}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -152,11 +153,6 @@
                             <groupId>org.springframework.boot</groupId>
                             <artifactId>spring-boot-configuration-processor</artifactId>
                             <version>${project.parent.version}</version>
-                        </path>
-                        <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>${mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
@@ -180,28 +176,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--            <plugin>-->
-            <!--                &lt;!&ndash;start with basic information to get Liquibase plugin:-->
-            <!--                include <groupId>, <artifactID>, and <version> elements&ndash;&gt;-->
-            <!--                <groupId>org.liquibase</groupId>-->
-            <!--                <artifactId>liquibase-maven-plugin</artifactId>-->
-            <!--                <version>${liquibase.version}</version>-->
-            <!--                <configuration>-->
-            <!--                    &lt;!&ndash;set values for Liquibase properties and settings-->
-            <!--                    for example, the location of a properties file to use&ndash;&gt;-->
-            <!--                    <propertyFile>src/main/resources/application.yml</propertyFile>-->
-            <!--                    <outputChangeLogFile>src/main/resources/db/changelog/updateDB.xml</outputChangeLogFile>-->
-            <!--                </configuration>-->
-            <!--                <dependencies>-->
-            <!--                    &lt;!&ndash;set up any dependencies for Liquibase to function in your-->
-            <!--                    environment for example, a database-specific plugin&ndash;&gt;-->
-            <!--                    <dependency>-->
-            <!--                        <groupId>org.liquibase.ext</groupId>-->
-            <!--                        <artifactId>liquibase-postgresql</artifactId>-->
-            <!--                        <version>${liquibase.version}</version>-->
-            <!--                    </dependency>-->
-            <!--                </dependencies>-->
-            <!--            </plugin>-->
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
