--- a/AndroidApp/build.gradle
+++ b/AndroidApp/build.gradle
@@ -2,7 +2,10 @@
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
+    id "org.openapi.generator" version "6.0.0" apply false
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
