--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -47,8 +47,9 @@ openApiGenerate {
     ]
 }
 
+
 dependencies {
-    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'com.google.guava:guava:31.1-android'
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
