--- a/AndroidApp/build.gradle
+++ b/AndroidApp/build.gradle
@@ -1,10 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id "org.openapi.generator" version "6.0.0" apply false
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
+    id 'org.openapi.generator' version '5.4.0' apply false
 }
-
 
 
 task clean(type: Delete) {
