--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -8,6 +8,12 @@ plugins {
 android {
     compileSdk 32
 
+    packagingOptions {
+        pickFirst 'mozilla/public-suffix-list.txt'
+        pickFirst 'META-INF/DEPENDENCIES'
+    }
+
+
     defaultConfig {
         applicationId "de.nkoepf.keeptrack.androidapp"
         minSdk 29
@@ -32,19 +38,28 @@ android {
         viewBinding true
     }
     namespace 'de.nkoepf.keeptrack.androidapp'
+
+    sourceSets{
+        main {
+            java {
+                srcDir("$buildDir/generated/src/main/java")
+            }
+        }
+    }
 }
 
 
 openApiGenerate {
-    generatorName = "java"
-    inputSpec = "$rootDir/../../Backend/openapi-spec.yaml".toString()
+    generatorName = "android"
+    inputSpec = "$rootDir/../Backend/openapi-spec.yaml".toString()
     outputDir = "$buildDir/generated".toString()
-    apiPackage = "org.openapi.example.api"
-    invokerPackage = "org.openapi.example.invoker"
-    modelPackage = "org.openapi.example.model"
+    apiPackage = "de.nkoepf.keeptrack.api"
+    modelPackage = "de.nkoepf.keeptrack.model"
+
     configOptions = [
             dateLibrary: "java17"
     ]
+
 }
 
 
@@ -59,6 +74,15 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.2'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    implementation 'org.apache.httpcomponents:httpmime:4.5.13'
+
+    implementation 'io.swagger:swagger-annotations:1.6.8'
+    implementation 'com.google.code.gson:gson:2.9.1'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
